Updating retrieval of open match load balancer

--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -135,13 +135,21 @@ Resources:
           env:
             variables:
               REGION: $AWS_REGION
+              CLUSTER1_NAME: "agones-gameservers-1"
+              CLUSTER1_REGION: "us-east-1"
+              CLUSTER1_CIDR: "10.1.0.0/16"
+              CLUSTER2_NAME: "agones-gameservers-2"
+              CLUSTER2_REGION: "us-east-2"
+              CLUSTER2_CIDR: "10.2.0.0/16"
+              KUBERNETES_VERSION: "1.28"
               MAX_RETRIES: 5
               RETRY_DELAY: 5
+
           phases:
             install:
               commands:
                 - echo Installing dependencies...
-                - sudo yum install -y yum-utils shadow-utils
+                - sudo yum install -y yum-utils shadow-utils jq gettext golang docker openssl
                 - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
                 - sudo yum -y install terraform
                 - terraform --version
@@ -151,17 +159,6 @@ Resources:
                 - chmod 700 get_helm.sh
                 - ./get_helm.sh
                 - helm version
-
-                - echo "Installing jq..."
-                - sudo yum install -y jq
-
-                - echo Installing GetText...
-                - sudo yum install -y gettext
-                - gettext --version
-
-                - echo Installing Go...
-                - sudo yum install -y golang
-                - go version
 
                 - echo "Installing kubectl..."
                 - curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.28.0/2023-04-19/bin/linux/amd64/kubectl
@@ -181,13 +178,21 @@ Resources:
                 - echo Checking out repositories...
                 - echo "Listing contents of CODEBUILD_SRC_DIR"
                 - ls -la $CODEBUILD_SRC_DIR
+
             build:
               commands:
                 - echo "Build started on $(date)"
                 - echo "Creating the first and second clusters..."
                 - cd terraform/cluster
                 - terraform init
-                - terraform apply -auto-approve -var="cluster_1_name=${CLUSTER1_NAME}" -var="cluster_1_region=${CLUSTER1_REGION}" -var="cluster_1_cidr=${CLUSTER1_CIDR}" -var="cluster_2_name=${CLUSTER2_NAME}" -var="cluster_2_region=${CLUSTER2_REGION}" -var="cluster_2_cidr=${CLUSTER2_CIDR}" -var="cluster_version=${KUBERNETES_VERSION}"
+                - terraform apply -auto-approve \
+                    -var="cluster_1_name=${CLUSTER1_NAME}" \
+                    -var="cluster_1_region=${CLUSTER1_REGION}" \
+                    -var="cluster_1_cidr=${CLUSTER1_CIDR}" \
+                    -var="cluster_2_name=${CLUSTER2_NAME}" \
+                    -var="cluster_2_region=${CLUSTER2_REGION}" \
+                    -var="cluster_2_cidr=${CLUSTER2_CIDR}" \
+                    -var="cluster_version=${KUBERNETES_VERSION}"
                 - export CLUSTER1_ENDPOINT=$(terraform output -raw cluster_1_endpoint)
                 - export CLUSTER1_CERTIFICATE_AUTHORITY_DATA=$(terraform output -raw cluster_1_certificate_authority_data)
                 - export CLUSTER1_TOKEN=$(terraform output -raw cluster_1_token)
@@ -203,71 +208,76 @@ Resources:
                 - cd terraform/intra-cluster
                 - terraform init
                 - terraform workspace select -or-create ${CLUSTER1_REGION}
-                - terraform apply -auto-approve -var="cluster_name=${CLUSTER1_NAME}" -var="cluster_region=${CLUSTER1_REGION}" -var="cluster_endpoint=$CLUSTER1_ENDPOINT" -var="cluster_certificate_authority_data=$CLUSTER1_CERTIFICATE_AUTHORITY_DATA" -var="cluster_token=$CLUSTER1_TOKEN" -var="cluster_version=${KUBERNETES_VERSION}" -var="oidc_provider_arn=$CLUSTER1_OIDC_PROVIDER_ARN" -var="namespaces=[\"agones-openmatch\", \"agones-system\", \"gameservers\", \"open-match\"]" -var="configure_agones=true" -var="configure_open_match=true"
+                - terraform apply -auto-approve \
+                    -var="cluster_name=${CLUSTER1_NAME}" \
+                    -var="cluster_region=${CLUSTER1_REGION}" \
+                    -var="cluster_endpoint=$CLUSTER1_ENDPOINT" \
+                    -var="cluster_certificate_authority_data=$CLUSTER1_CERTIFICATE_AUTHORITY_DATA" \
+                    -var="cluster_token=$CLUSTER1_TOKEN" \
+                    -var="cluster_version=${KUBERNETES_VERSION}" \
+                    -var="oidc_provider_arn=$CLUSTER1_OIDC_PROVIDER_ARN" \
+                    -var="namespaces=[\"agones-openmatch\", \"agones-system\", \"gameservers\", \"open-match\"]" \
+                    -var="configure_agones=true" \
+                    -var="configure_open_match=true"
 
                 - terraform workspace select -or-create ${CLUSTER2_REGION}
-                - terraform apply -auto-approve -var="cluster_name=${CLUSTER2_NAME}" -var="cluster_region=${CLUSTER2_REGION}" -var="cluster_endpoint=$CLUSTER2_ENDPOINT" -var="cluster_certificate_authority_data=$CLUSTER2_CERTIFICATE_AUTHORITY_DATA" -var="cluster_token=$CLUSTER2_TOKEN" -var="cluster_version=${KUBERNETES_VERSION}" -var="oidc_provider_arn=$CLUSTER2_OIDC_PROVIDER_ARN" -var="namespaces=[\"agones-system\", \"gameservers\"]" -var="configure_agones=true" -var="configure_open_match=false"
+                - terraform apply -auto-approve \
+                    -var="cluster_name=${CLUSTER2_NAME}" \
+                    -var="cluster_region=${CLUSTER2_REGION}" \
+                    -var="cluster_endpoint=$CLUSTER2_ENDPOINT" \
+                    -var="cluster_certificate_authority_data=$CLUSTER2_CERTIFICATE_AUTHORITY_DATA" \
+                    -var="cluster_token=$CLUSTER2_TOKEN" \
+                    -var="cluster_version=${KUBERNETES_VERSION}" \
+                    -var="oidc_provider_arn=$CLUSTER2_OIDC_PROVIDER_ARN" \
+                    -var="namespaces=[\"agones-system\", \"gameservers\"]" \
+                    -var="configure_agones=true" \
+                    -var="configure_open_match=false"
 
                 - echo "Reset the root directory"
                 - cd ../..
 
-                - |
-                  echo "Get the Agones allocator load balancer name and ARN"
-                  export FLB_NAME=$(kubectl get service agones-allocator -n agones-system -o jsonpath='{.status.loadBalancer.ingress[0].hostname}')
-                  echo "Agones allocator load balancer name $FLB_NAME"
-                  export ELB_NAME=$(aws elb describe-load-balancers --region $CLUSTER1_REGION | jq -r '.LoadBalancerDescriptions[] | select(.DNSName == "'$FLB_NAME'") | .LoadBalancerName')
-                  echo "ELB Name: $ELB_NAME"
-                  export FLB_ARN="arn:aws:elasticloadbalancing:${CLUSTER1_REGION}:${AWS_ACCOUNT_ID}:loadbalancer/${ELB_NAME}"
-                  echo "Agones allocator load balancer ARN $FLB_ARN"
+                # Item 5: Fetching Load Balancer ARN
+                - echo "Get the Agones allocator load balancer name and ARN"
+                - export FLB_NAME=$(kubectl get services -n open-match -o json | jq -r '.items[] | select(.metadata.name=="open-match-frontend-loadbalancer") | .status.loadBalancer.ingress[0].hostname')
+                - export FLB_ARN=$(aws elbv2 describe-load-balancers --region ${CLUSTER1_REGION} | jq -r ".LoadBalancers[] | select(.DNSName==\"$FLB_NAME\") | .LoadBalancerArn")
+                - echo "Agones allocator load balancer ARN $FLB_ARN"
 
                 - echo "Get the values needed by Terraform"
                 - export VPC1=$(terraform -chdir=terraform/cluster output -raw vpc_1_id)
-                - echo $VPC1
-
                 - export SUBNETS1=$(terraform -chdir=terraform/cluster output gameservers_1_subnets)
-                - echo $SUBNETS1
-
                 - export ROUTE1=$(terraform -chdir=terraform/cluster output -raw private_route_table_1_id)
-                - echo $ROUTE1          
-
                 - export VPC2=$(terraform -chdir=terraform/cluster output -raw vpc_2_id)
-                - echo $VPC2
-
                 - export SUBNETS2=$(terraform -chdir=terraform/cluster output gameservers_2_subnets)
-                - echo $SUBNETS2
-
                 - export ROUTE2=$(terraform -chdir=terraform/cluster output -raw private_route_table_2_id)
-                - echo $ROUTE2
-
-                - export CLUSTER1_CERTIFICATE_AUTHORITY_DATA=$(terraform output -raw cluster_1_certificate_authority_data)
-                - echo $CLUSTER1_CERTIFICATE_AUTHORITY_DATA
-
-                - export CLUSTER1_TOKEN=$(terraform output -raw cluster_1_token)
-                - echo $CLUSTER1_TOKEN
-
-                - export CLUSTER1_OIDC_PROVIDER_ARN=$(terraform output -raw oidc_provider_1_arn)
-                - echo $CLUSTER1_OIDC_PROVIDER_ARN
-
-                - export CLUSTER2_ENDPOINT=$(terraform output -raw cluster_2_endpoint)
-                - echo $CLUSTER2_ENDPOINT
-
-                - export CLUSTER2_CERTIFICATE_AUTHORITY_DATA=$(terraform output -raw cluster_2_certificate_authority_data)
-                - echo $CLUSTER2_CERTIFICATE_AUTHORITY_DATA
-
-                - export CLUSTER2_TOKEN=$(terraform output -raw cluster_2_token)
-                - echo $CLUSTER2_TOKEN
-
-                - export CLUSTER2_OIDC_PROVIDER_ARN=$(terraform output -raw oidc_provider_2_arn)
-                - echo $CLUSTER2_OIDC_PROVIDER_ARN
-
+                
                 - cd terraform/extra-cluster
                 - terraform init
-                - echo "Run the Terraform command for the extra-cluster"
-                - terraform apply -auto-approve -var="cluster_1_name=${CLUSTER1_NAME}" -var="requester_cidr=${CLUSTER1_CIDR}" -var="requester_vpc_id=${VPC1}" -var="requester_route=${ROUTE1}" -var="cluster_1_gameservers_subnets=${SUBNETS1}" -var="cluster_1_endpoint=${CLUSTER1_ENDPOINT}" -var="cluster_1_certificate_authority_data=${CLUSTER1_CERTIFICATE_AUTHORITY_DATA}" -var="cluster_1_token=${CLUSTER1_TOKEN}" -var="cluster_2_name=${CLUSTER2_NAME}" -var="accepter_cidr=${CLUSTER2_CIDR}" -var="accepter_vpc_id=${VPC2}" -var="accepter_route=${ROUTE2}" -var="cluster_2_gameservers_subnets=${SUBNETS2}" -var="cluster_2_endpoint=${CLUSTER2_ENDPOINT}" -var="cluster_2_certificate_authority_data=${CLUSTER2_CERTIFICATE_AUTHORITY_DATA}" -var="cluster_2_token=${CLUSTER2_TOKEN}" -var="cluster_1_region=${CLUSTER1_REGION}" -var="ecr_region=${CLUSTER1_REGION}" -var="cluster_2_region=${CLUSTER2_REGION}" -var="aws_lb_arn=${FLB_ARN}"
+                - terraform apply -auto-approve \
+                    -var="cluster_1_name=${CLUSTER1_NAME}" \
+                    -var="requester_cidr=${CLUSTER1_CIDR}" \
+                    -var="requester_vpc_id=${VPC1}" \
+                    -var="requester_route=${ROUTE1}" \
+                    -var="cluster_1_gameservers_subnets=${SUBNETS1}" \
+                    -var="cluster_1_endpoint=${CLUSTER1_ENDPOINT}" \
+                    -var="cluster_1_certificate_authority_data=${CLUSTER1_CERTIFICATE_AUTHORITY_DATA}" \
+                    -var="cluster_1_token=${CLUSTER1_TOKEN}" \
+                    -var="cluster_2_name=${CLUSTER2_NAME}" \
+                    -var="accepter_cidr=${CLUSTER2_CIDR}" \
+                    -var="accepter_vpc_id=${VPC2}" \
+                    -var="accepter_route=${ROUTE2}" \
+                    -var="cluster_2_gameservers_subnets=${SUBNETS2}" \
+                    -var="cluster_2_endpoint=${CLUSTER2_ENDPOINT}" \
+                    -var="cluster_2_certificate_authority_data=${CLUSTER2_CERTIFICATE_AUTHORITY_DATA}" \
+                    -var="cluster_2_token=${CLUSTER2_TOKEN}" \
+                    -var="cluster_1_region=${CLUSTER1_REGION}" \
+                    -var="ecr_region=${CLUSTER1_REGION}" \
+                    -var="cluster_2_region=${CLUSTER2_REGION}" \
+                    -var="aws_lb_arn=${FLB_ARN}"
 
             post_build:
               commands:
                 - echo "Build completed on $(date)"
+
 
   CodeBuildArtifactsBucket:
     Type: AWS::S3::Bucket
