--- a/terraform/cloudformation/main.yaml
+++ b/terraform/cloudformation/main.yaml
@@ -112,19 +112,19 @@ Resources:
             Value: !Ref TerraformStateBucket
           - Name: TERRAFORM_DYNAMO_TABLE
             Value: !Ref TerraformDynamoDBLockTable
-          - Name: CLUSTER1_NAME
+          - Name: CLUSTER1
             Value: !Ref Cluster1Name
-          - Name: CLUSTER1_REGION
+          - Name: REGION1
             Value: !Ref Cluster1Region
-          - Name: CLUSTER1_CIDR
+          - Name: CIDR1
             Value: !Ref Cluster1CIDR
-          - Name: CLUSTER2_NAME
+          - Name: CLUSTER2
             Value: !Ref Cluster2Name
-          - Name: CLUSTER2_REGION
+          - Name: REGION2
             Value: !Ref Cluster2Region
-          - Name: CLUSTER2_CIDR
+          - Name: CIDR2
             Value: !Ref Cluster2CIDR
-          - Name: KUBERNETES_VERSION
+          - Name: VERSION
             Value: !Ref KubernetesVersion
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Source:
@@ -135,21 +135,13 @@ Resources:
           env:
             variables:
               REGION: $AWS_REGION
-              CLUSTER1_NAME: "agones-gameservers-1"
-              CLUSTER1_REGION: "us-east-1"
-              CLUSTER1_CIDR: "10.1.0.0/16"
-              CLUSTER2_NAME: "agones-gameservers-2"
-              CLUSTER2_REGION: "us-east-2"
-              CLUSTER2_CIDR: "10.2.0.0/16"
-              KUBERNETES_VERSION: "1.28"
               MAX_RETRIES: 5
               RETRY_DELAY: 5
-
           phases:
             install:
               commands:
                 - echo Installing dependencies...
-                - sudo yum install -y yum-utils shadow-utils jq gettext golang docker openssl
+                - sudo yum install -y yum-utils shadow-utils
                 - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
                 - sudo yum -y install terraform
                 - terraform --version
@@ -159,6 +151,17 @@ Resources:
                 - chmod 700 get_helm.sh
                 - ./get_helm.sh
                 - helm version
+
+                - echo "Installing jq..."
+                - sudo yum install -y jq
+
+                - echo Installing GetText...
+                - sudo yum install -y gettext
+                - gettext --version
+
+                - echo Installing Go...
+                - sudo yum install -y golang
+                - go version
 
                 - echo "Installing kubectl..."
                 - curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.28.0/2023-04-19/bin/linux/amd64/kubectl
@@ -178,106 +181,131 @@ Resources:
                 - echo Checking out repositories...
                 - echo "Listing contents of CODEBUILD_SRC_DIR"
                 - ls -la $CODEBUILD_SRC_DIR
-
             build:
               commands:
-                - echo "Build started on $(date)"
-                - echo "Creating the first and second clusters..."
-                - cd terraform/cluster
-                - terraform init
-                - terraform apply -auto-approve \
-                    -var="cluster_1_name=${CLUSTER1_NAME}" \
-                    -var="cluster_1_region=${CLUSTER1_REGION}" \
-                    -var="cluster_1_cidr=${CLUSTER1_CIDR}" \
-                    -var="cluster_2_name=${CLUSTER2_NAME}" \
-                    -var="cluster_2_region=${CLUSTER2_REGION}" \
-                    -var="cluster_2_cidr=${CLUSTER2_CIDR}" \
-                    -var="cluster_version=${KUBERNETES_VERSION}"
-                - export CLUSTER1_ENDPOINT=$(terraform output -raw cluster_1_endpoint)
-                - export CLUSTER1_CERTIFICATE_AUTHORITY_DATA=$(terraform output -raw cluster_1_certificate_authority_data)
-                - export CLUSTER1_TOKEN=$(terraform output -raw cluster_1_token)
-                - export CLUSTER1_OIDC_PROVIDER_ARN=$(terraform output -raw oidc_provider_1_arn)
-                - export CLUSTER2_ENDPOINT=$(terraform output -raw cluster_2_endpoint)
-                - export CLUSTER2_CERTIFICATE_AUTHORITY_DATA=$(terraform output -raw cluster_2_certificate_authority_data)
-                - export CLUSTER2_TOKEN=$(terraform output -raw cluster_2_token)
-                - export CLUSTER2_OIDC_PROVIDER_ARN=$(terraform output -raw oidc_provider_2_arn)
-                - cd ../..
-                - echo "Finished creating the first and second clusters."
+                - echo "Initializing Terraform for cluster creation..."
+                - terraform -chdir=terraform/cluster init
 
-                - echo "Switching to the intra-cluster directory"
-                - cd terraform/intra-cluster
-                - terraform init
-                - terraform workspace select -or-create ${CLUSTER1_REGION}
-                - terraform apply -auto-approve \
-                    -var="cluster_name=${CLUSTER1_NAME}" \
-                    -var="cluster_region=${CLUSTER1_REGION}" \
-                    -var="cluster_endpoint=$CLUSTER1_ENDPOINT" \
-                    -var="cluster_certificate_authority_data=$CLUSTER1_CERTIFICATE_AUTHORITY_DATA" \
-                    -var="cluster_token=$CLUSTER1_TOKEN" \
-                    -var="cluster_version=${KUBERNETES_VERSION}" \
-                    -var="oidc_provider_arn=$CLUSTER1_OIDC_PROVIDER_ARN" \
+                - echo "Creating both clusters..."
+                - |
+                  terraform -chdir=terraform/cluster apply -auto-approve \
+                    -var="cluster_1_name=${CLUSTER1}" \
+                    -var="cluster_1_region=${REGION1}" \
+                    -var="cluster_1_cidr=${CIDR1}" \
+                    -var="cluster_2_name=${CLUSTER2}" \
+                    -var="cluster_2_region=${REGION2}" \
+                    -var="cluster_2_cidr=${CIDR2}" \
+                    -var="cluster_version=${VERSION}"
+                
+
+                - echo "Step 2 - Terraform Intra-Cluster"
+                - echo "Initializing Terraform for intra-cluster configuration..."
+                - terraform -chdir=terraform/intra-cluster init
+
+                - echo "Deploying to the first cluster (${CLUSTER1})..."
+                - |
+                  terraform -chdir=terraform/intra-cluster workspace select -or-create=true ${REGION1} &&
+                  terraform -chdir=terraform/intra-cluster apply -auto-approve \
+                    -var="cluster_name=${CLUSTER1}" \
+                    -var="cluster_region=${REGION1}" \
+                    -var="cluster_endpoint=$(terraform -chdir=terraform/cluster output -raw cluster_1_endpoint)" \
+                    -var="cluster_certificate_authority_data=$(terraform -chdir=terraform/cluster output -raw cluster_1_certificate_authority_data)" \
+                    -var="cluster_token=$(terraform -chdir=terraform/cluster output -raw cluster_1_token)" \
+                    -var="cluster_version=${VERSION}" \
+                    -var="oidc_provider_arn=$(terraform -chdir=terraform/cluster output -raw oidc_provider_1_arn)" \
                     -var="namespaces=[\"agones-openmatch\", \"agones-system\", \"gameservers\", \"open-match\"]" \
                     -var="configure_agones=true" \
                     -var="configure_open_match=true"
 
-                - terraform workspace select -or-create ${CLUSTER2_REGION}
-                - terraform apply -auto-approve \
-                    -var="cluster_name=${CLUSTER2_NAME}" \
-                    -var="cluster_region=${CLUSTER2_REGION}" \
-                    -var="cluster_endpoint=$CLUSTER2_ENDPOINT" \
-                    -var="cluster_certificate_authority_data=$CLUSTER2_CERTIFICATE_AUTHORITY_DATA" \
-                    -var="cluster_token=$CLUSTER2_TOKEN" \
-                    -var="cluster_version=${KUBERNETES_VERSION}" \
-                    -var="oidc_provider_arn=$CLUSTER2_OIDC_PROVIDER_ARN" \
+                - echo "Deploying to the second cluster (${CLUSTER2})..."
+                - |
+                  terraform -chdir=terraform/intra-cluster workspace select -or-create=true ${REGION2} &&
+                  terraform -chdir=terraform/intra-cluster apply -auto-approve \
+                    -var="cluster_name=${CLUSTER2}" \
+                    -var="cluster_region=${REGION2}" \
+                    -var="cluster_endpoint=$(terraform -chdir=terraform/cluster output -raw cluster_2_endpoint)" \
+                    -var="cluster_certificate_authority_data=$(terraform -chdir=terraform/cluster output -raw cluster_2_certificate_authority_data)" \
+                    -var="cluster_token=$(terraform -chdir=terraform/cluster output -raw cluster_2_token)" \
+                    -var="cluster_version=${VERSION}" \
+                    -var="oidc_provider_arn=$(terraform -chdir=terraform/cluster output -raw oidc_provider_2_arn)" \
                     -var="namespaces=[\"agones-system\", \"gameservers\"]" \
                     -var="configure_agones=true" \
                     -var="configure_open_match=false"
 
-                - echo "Reset the root directory"
-                - cd ../..
+                - echo "Fetching the load balancer ARN..."
 
-                # Item 5: Fetching Load Balancer ARN
-                - echo "Get the Agones allocator load balancer name and ARN"
-                - export FLB_NAME=$(kubectl get services -n open-match -o json | jq -r '.items[] | select(.metadata.name=="open-match-frontend-loadbalancer") | .status.loadBalancer.ingress[0].hostname')
-                - export FLB_ARN=$(aws elbv2 describe-load-balancers --region ${CLUSTER1_REGION} | jq -r ".LoadBalancers[] | select(.DNSName==\"$FLB_NAME\") | .LoadBalancerArn")
-                - echo "Agones allocator load balancer ARN $FLB_ARN"
+                - echo "Updating kubeconfig for Cluster 1..."
+                - aws eks --region ${REGION1} update-kubeconfig --name ${CLUSTER1}
+                - kubectl config use-context arn:aws:eks:${REGION1}:$(aws sts get-caller-identity --query Account --output text):cluster/${CLUSTER1}
 
-                - echo "Get the values needed by Terraform"
+                - echo "Verifying current context..."
+                - kubectl config current-context
+
+                - echo "Setting the Open Match service name"
+                - export OPEN_MATCH_SVC_NAME=$CLUSTER1-om-fe
+                - echo "OPEN_MATCH_SVC_NAME=$OPEN_MATCH_SVC_NAME"
+                
+                - echo "Setting the name of the Load balancer"
+                - |
+                  export FLB_NAME=$(kubectl get services -n open-match -o json | jq -r --arg OPEN_MATCH_SVC_NAME "$OPEN_MATCH_SVC_NAME" '.items[] | select(.metadata.name==$OPEN_MATCH_SVC_NAME) | .status.loadBalancer.ingress[0].hostname')
+                - echo "FLB_NAME=$FLB_NAME"
+                
+                - echo "Retrieving the ARN of the load balancer"
+                - |
+                  export FLB_ARN=$(aws elbv2 describe-load-balancers --region ${REGION1} | jq -r ".LoadBalancers[] | select(.DNSName==\"$FLB_NAME\") | .LoadBalancerArn")
+                - echo "FLB_ARN=$FLB_ARN"
+
+                - echo "Initializing Terraform for extra-cluster configuration"
+                - terraform -chdir=terraform/extra-cluster init
+
+                - echo "Getting values needed by Terraform"
                 - export VPC1=$(terraform -chdir=terraform/cluster output -raw vpc_1_id)
                 - export SUBNETS1=$(terraform -chdir=terraform/cluster output gameservers_1_subnets)
                 - export ROUTE1=$(terraform -chdir=terraform/cluster output -raw private_route_table_1_id)
+                - export ENDPOINT1=$(terraform -chdir=terraform/cluster output -raw cluster_2_endpoint)
+                - export AUTH1=$(terraform -chdir=terraform/cluster output -raw cluster_1_certificate_authority_data)
+                - export TOKEN1=$(terraform -chdir=terraform/cluster output -raw cluster_1_token)
                 - export VPC2=$(terraform -chdir=terraform/cluster output -raw vpc_2_id)
                 - export SUBNETS2=$(terraform -chdir=terraform/cluster output gameservers_2_subnets)
                 - export ROUTE2=$(terraform -chdir=terraform/cluster output -raw private_route_table_2_id)
-                
-                - cd terraform/extra-cluster
-                - terraform init
-                - terraform apply -auto-approve \
-                    -var="cluster_1_name=${CLUSTER1_NAME}" \
-                    -var="requester_cidr=${CLUSTER1_CIDR}" \
+                - export ENDPOINT2=$(terraform -chdir=terraform/cluster output -raw cluster_2_endpoint)
+                - export AUTH2=$(terraform -chdir=terraform/cluster output -raw cluster_2_certificate_authority_data)
+                - export TOKEN2=$(terraform -chdir=terraform/cluster output -raw cluster_2_token)
+
+                - echo "Creating extra-cluster resources"
+                - |
+                  terraform -chdir=terraform/extra-cluster apply -auto-approve \
+                    -var="cluster_1_name=${CLUSTER1}" \
+                    -var="requester_cidr=${CIDR1}" \
                     -var="requester_vpc_id=${VPC1}" \
                     -var="requester_route=${ROUTE1}" \
                     -var="cluster_1_gameservers_subnets=${SUBNETS1}" \
-                    -var="cluster_1_endpoint=${CLUSTER1_ENDPOINT}" \
-                    -var="cluster_1_certificate_authority_data=${CLUSTER1_CERTIFICATE_AUTHORITY_DATA}" \
-                    -var="cluster_1_token=${CLUSTER1_TOKEN}" \
-                    -var="cluster_2_name=${CLUSTER2_NAME}" \
-                    -var="accepter_cidr=${CLUSTER2_CIDR}" \
+                    -var="cluster_1_endpoint=${ENDPOINT1}" \
+                    -var="cluster_1_certificate_authority_data=${AUTH1}" \
+                    -var="cluster_1_token=${TOKEN1}" \
+                    -var="cluster_2_name=${CLUSTER2}" \
+                    -var="accepter_cidr=${CIDR2}" \
                     -var="accepter_vpc_id=${VPC2}" \
                     -var="accepter_route=${ROUTE2}" \
                     -var="cluster_2_gameservers_subnets=${SUBNETS2}" \
-                    -var="cluster_2_endpoint=${CLUSTER2_ENDPOINT}" \
-                    -var="cluster_2_certificate_authority_data=${CLUSTER2_CERTIFICATE_AUTHORITY_DATA}" \
-                    -var="cluster_2_token=${CLUSTER2_TOKEN}" \
-                    -var="cluster_1_region=${CLUSTER1_REGION}" \
-                    -var="ecr_region=${CLUSTER1_REGION}" \
-                    -var="cluster_2_region=${CLUSTER2_REGION}" \
+                    -var="cluster_2_endpoint=${ENDPOINT2}" \
+                    -var="cluster_2_certificate_authority_data=${AUTH2}" \
+                    -var="cluster_2_token=${TOKEN2}" \
+                    -var="cluster_1_region=${REGION1}" \
+                    -var="ecr_region=${REGION1}" \
+                    -var="cluster_2_region=${REGION2}" \
                     -var="aws_lb_arn=${FLB_ARN}"
+
+                - echo "Capturing Terraform output"
+                - terraform -chdir=terraform/extra-cluster output > terraform_output.txt    
 
             post_build:
               commands:
                 - echo "Build completed on $(date)"
-
+                - echo "Terraform Output:"
+                - cat terraform_output.txt
+                - echo "Global Accelerator Address:"
+                - grep "global_accelerator_address" terraform_output.txt | cut -d '=' -f2 | tr -d ' "'   
 
   CodeBuildArtifactsBucket:
     Type: AWS::S3::Bucket
